--- a/index.html
+++ b/index.html
@@ -14,4 +14,6 @@
   </body>
 
   <script type="module" src="./index.js"></script>
+  <script src="http://cdn.date-fns.org/v1.9.0/date_fns.min.js"></script>
+
 </html>
