--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="app"></div>
   </body>
 
-  <script type="module" src="./index.js"></script>
-  <script src="http://cdn.date-fns.org/v1.9.0/date_fns.min.js"></script>
+  <script type="module" src="./dist/index.js"></script>
+  <!-- <script src="http://cdn.date-fns.org/v1.9.0/date_fns.min.js"></script> -->
 
 </html>
